# docking-reward

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  example_config.yaml  pyproject.toml  test_unidock_config.yaml
.claude/: settings.local.json
.github/workflows/: test.yml
src/docking_reward/: __init__.py  calculator.py  cli.py  config.py  docking.py  druglikeness.py  interactions.py  ligand_prep.py  logging_config.py  parallel.py  protein_prep.py  unidock.py
tests/: __init__.py  test_config.py  test_druglikeness.py  test_ligand_prep.py  test_smiles.txt  test_unidock_config.yaml  test_unidock_multi_gpu.yaml
tests/output/: breakdown.csv  results.csv
tests/output/poses/: mol_0_c1cncnc1O.sdf  mol_2_CNC_lp__eq_O_rp_CN1_lb_C_at_H_rb__lp_CC_lp__eq_O_r.sdf  mol_3_CNC_lp__eq_O_rp_CCOCCC_lp__eq_O_rp_N1CCC_lp_C2CCN_.sdf  mol_4_n1c_lp_c2c_lp_nc1c1cc_lp_cnc1_rp_OC_rp_cc_lp_c_lp_.sdf  mol_5_CN_lp_c1c2ccccc2nc_lp_c2cnccc2_rp_n1_rp_CCCC1_eq_N.sdf
tests/output/tmp/ligands/: mol_2.pdbqt  mol_3.pdbqt  mol_4.pdbqt  mol_5.pdbqt
tests/output/tmp/proteins/: off_target.pdbqt  pgk2.pdbqt
tests/tmp/ligands/: mol_0.pdbqt  mol_1.pdbqt
